--- a/style.css
+++ b/style.css
@@ -98,4 +98,17 @@ body {
 	  margin-left: 17px; /*position of the box from left margin*/ 
 	}
         
-    
+    /*Part 3: Photo Gallery CSS*/
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
