--- a/style.css
+++ b/style.css
@@ -103,6 +103,8 @@ body {
 	/*Part 2*/
 	#part2{ 
 		background-color: #d9d9d9;
+		padding: 200px 0px; 
+		
 	}
 	
 	  h1{ 
@@ -115,42 +117,6 @@ body {
 		color: #a9a9a9;
 		}
 		
-		.first {
-		float: left;
-		width:25%;
-		background: #caebf2; 
-		text-align: center;
-		border-radius: 2px;
-		}
-			
-		.first p {
-		font-style: italic;
-		}
-			
-		.second {
-		float: left;
-		width: 50%;
-		background: #a9a9a9; 
-		text-align: center; 
-		border-radius: 2px; 
-		}
-			
-		.third {
-		float: left;
-		width: 25%;
-		background: #caebf2; 
-		text-align: center;
-		border-radius: 2px; 
-		}
-			
-		.third p {
-		font-style: italic;
-		}
-			
-		.boxes {
-		margin: 5%; 
-		}
-	
 
         
     /*Part 3: Photo Gallery CSS*/
