--- a/style.css
+++ b/style.css
@@ -100,9 +100,15 @@ body {
 	}
 	}
 	
+	/*Part 1*/
+	#part1{ 
+	background-color: #d9d9d9;
+	padding: 200px 0px; 
+	}
+	
 	/*Part 2*/
 	#part2{ 
-		background-color: #d9d9d9;
+		background-color: #493548;
 		padding: 200px 0px; 
 		
 	}
