--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 	}
 	
 	header { 
-	  background: black;
+	  background: transparent;
 	  height: 50px;
 	  padding-bottom: 30px;
 	}
@@ -11,7 +11,7 @@ body {
 	.nbar { 
 	  max-width: 100%;
 	  padding: 0px 30px;
-	  position: relative;
+	  position: fixed;
 	}
 	
 	.name {  /*the name of company on the left side*/
