--- a/style.css
+++ b/style.css
@@ -102,9 +102,10 @@ body {
 	
 	/*Part 1*/
 	#part1{ 
-	background-color: #d9d9d9;
-	padding: 200px 0px; 
+	background: url("header.jpg") no-repeat 50% 50%;
+	padding: 300px 0px; 
 	}
+
 	
 	/*Part 2*/
 	#part2{ 
