--- a/style.css
+++ b/style.css
@@ -134,9 +134,8 @@ body {
     padding: 200px 0px;
     background-color: #d9d9d9;
 }
-    /*table*/
-    
-       
+   /* --table--
+      
     table{
     width: 100%;
     
@@ -145,10 +144,14 @@ body {
         table img{
             width: 100%;
             
-        }
+        } */
     
-        
-        
+.slides{
+display: none;
+    border: 5px solid grey;
+  
+}
+
         
         
         
