--- a/style.css
+++ b/style.css
@@ -138,7 +138,6 @@ body {
 	#part3{
     padding: 200px 0px;
     background-color: #d9d9d9;
-<<<<<<< HEAD
 	}
 	
 	/* --table--
@@ -154,16 +153,16 @@ body {
 		display: none;
 		border: 5px solid grey;
 	}
-	
-	.part4{
+
+	#part4{
 	width:740px;
 	height:640px;
 	background:#e6e6e6;
-	border-radius:8px;
-	box-shadow:0 0 40px -10px #000;
-	margin:calc(462px - 220px) auto;
+	border-radius:20px;
+	box-shadow:0 0 20px #000;
+	margin:calc(200px - 100px) auto;
 	padding:20px 30px;
-	box-sizing:border-box;
+
 	font-family: Tahoma ,Helvetica,Arial,sans-serif;
 	position:relative;
 	}
@@ -210,33 +209,10 @@ body {
 	color:#fff;
 }
  
-=======
-}
-   /* --table--
-      
-    table{
-    width: 100%;
-    
-     }
-        
-        table img{
-            width: 100%;
-            
-        } */
-    
-.slides{
-display: none;
-    border: 5px solid grey;
-  
 }
 
         
         
         
         
-        
-        
-        
-        
-        
->>>>>>> origin/master
+     
