--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@
 
 	#part42{
 	width:740px;
-	height:600px;
+	height:700px;
 	background:#d9d9d9;
 	border-radius:20px;
 	box-shadow:0 0 20px #000;
@@ -188,6 +188,20 @@
 	transition:all .3s;
 	border-bottom:2px solid #bebed2;
 	}
+	
+	select { 
+	width:100%;
+	padding:10px;
+	box-sizing:border-box;
+	background: none; 
+	outline:none;
+	resize:none;
+	border:0;
+	font-family: Tahoma ,Helvetica,Arial,sans-serif;
+	transition:all .3s;
+	border-bottom:2px solid #bebed2;
+	} 
+	
 	
 	input:focus{
 	border-bottom:2px solid #43352c;
