--- a/style.css
+++ b/style.css
@@ -131,14 +131,18 @@ hr {
 	/*page 1*/
 	#page1{ 
 	background: url("header.jpg") no-repeat 50% 50%;
-	padding: 300px 0px; 
+	padding: 300px 0px;
+        a img{
+            border: none;
+        }
 	}
 
 	
 	/*page 2*/
 	#page2{ 
 		background-color: #493548;
-		padding: 200px 0px; 
+		padding: 50px 0px 150px 0px; 
+            /*top,right,bottom,left*/
 	}
 	
 	#page2 > a > img{ 
@@ -164,12 +168,13 @@ hr {
 
 	#page3{
         height: 500px;
-    padding: 100px 0px;
+   padding: 50px 0px 150px 0px; 
     background-color: #d9d9d9;
         color: #777;
 	margin: 0 auto;
 	position: relative;
 	width: auto;
+     overflow: auto;
 	}
 	
 	
@@ -193,9 +198,13 @@ hr {
 	#page4{
       
 		background-color: #493548; 
-		padding: 150px 0; 
+padding: 50px 0px 150px 0px;  
+        overflow: auto;
         
     }
+#page4 h1{
+      margin-bottom: 5%;
+}
 
 
 
@@ -273,7 +282,7 @@ hr {
 	/* contact us form */ 
 	#page5 {
 		background-color: #d9d9d9; 
-		padding: 150px 0; 
+	padding: 50px 0px 150px 0px; 
         float: clear;
 	}
 
@@ -339,9 +348,16 @@ hr {
 /*Book Us Services*/
 
 .panelInfo{
-    width: 25%;
+    width: 85%;
   float: clear;
+margin-left: 10%;
 }
+
+.panelInfo h2{
+    color: #d9d9d9;
+    text-align: center;
+}
+
 button.panel-box{
     background-color: #dcdcdc;
     color: red;
@@ -365,4 +381,24 @@ div.panel{
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
+}
+
+flex_hold{
+	display: -moz -flex;
+    display: -webkit -flex;
+    display: flex;
+    width: 100%;
+	flex:1 0 auto;
+
+
+}
+.flex_cont{
+	display: -moz -flex;
+    display: -webkit -flex;
+    display: flex;
+    width: 33%;
+	
+    float: left;
+	flex:1 0 auto;
+
 }
